--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,7 +11,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/bg_login"
-
         android:orientation="vertical"
         android:layout_x="0dp"
         android:layout_y="0dp">
@@ -104,7 +103,7 @@
                 android:text="忘记密码？"
                 android:textSize="16dp"
                 android:textColor="#1ca3d4"
-                />
+                android:id="@+id/activity_login_forget_password"/>
             <TextView
                 android:gravity="center"
                 android:layout_width="wrap_content"
@@ -113,7 +112,7 @@
                 android:text="新用户注册"
                 android:textSize="16dp"
                 android:textColor="#1ca3d4"
-                />
+                android:id="@+id/activity_login_regist"/>
 
         </RelativeLayout>
         <Button
