--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -35,12 +35,22 @@
     <style name="bottom_textview">
         <item name="android:gravity">center</item>
     </style>
+    <!--<style name="OnClickText" parent="bottom_textview">-->
+        <!--<item name="android:textSize">18dp</item>-->
+        <!--<item name="android:textColor">#47c01d</item>-->
+        <!--<item name="android:textStyle">bold</item>-->
+    <!--</style>-->
     <style name="OnClickText" parent="bottom_textview">
         <item name="android:textSize">18dp</item>
-        <item name="android:textColor">#47c01d</item>
+        <item name="android:textColor">#14b7f5</item>
         <item name="android:textStyle">bold</item>
     </style>
 
+    <!--<style name="unClickText" parent="bottom_textview">-->
+        <!--<item name="android:textColor">#939393</item>-->
+        <!--<item name="android:textSize">15dp</item>-->
+        <!--<item name="android:textStyle">normal</item>-->
+    <!--</style>-->
     <style name="unClickText" parent="bottom_textview">
         <item name="android:textColor">#939393</item>
         <item name="android:textSize">15dp</item>
