学生修改密码，注册，人脸注册，都已经写好了

--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -55,6 +55,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="新密码"
+
                 android:textColor="#878787"
                 android:layout_marginLeft="20dp"
                 />
@@ -76,6 +77,7 @@
                 android:layout_height="match_parent"
                 android:hint="请输入新密码"
                 android:textSize="16dp"
+                android:inputType="textPassword"
                 android:background="@null"
                 android:textColorHint="#a9a9a9"
                 android:id="@+id/change_password_input_password"
@@ -109,6 +111,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:hint="请再次输入密码"
+                android:inputType="textPassword"
                 android:paddingLeft="10dp"
                 android:textColorHint="#a9a9a9"
                 android:background="@null"
