--- a/app/src/main/res/layout/activity_regist.xml
+++ b/app/src/main/res/layout/activity_regist.xml
@@ -143,6 +143,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:hint="请输入新密码"
+                android:inputType="textPassword"
                 android:textSize="16dp"
                 android:background="@null"
                 android:textColorHint="#a9a9a9"
@@ -178,6 +179,7 @@
                 android:layout_height="match_parent"
                 android:hint="请再次输入密码"
                 android:paddingLeft="10dp"
+                android:inputType="textPassword"
                 android:textColorHint="#a9a9a9"
                 android:background="@null"
                 android:textSize="16dp"
