--- a/app/src/main/res/layout/activity_student_change_info.xml
+++ b/app/src/main/res/layout/activity_student_change_info.xml
@@ -50,6 +50,8 @@
                 app:civ_border_color="#FF000000"
                 android:src="@drawable/icon_head"
                 android:layout_margin="10dp"
+                android:layout_gravity="center"
+                android:id="@+id/activity_student_change_info_head_picture"
                 />
 
             <LinearLayout
@@ -107,6 +109,8 @@
                 android:layout_weight="3"
                 android:textSize="17dp"
                 android:text="哈哈"
+                android:background="@null"
+                android:id="@+id/activity_student_change_info_nick_name"
                 />
         </LinearLayout>
         <LinearLayout
@@ -121,7 +125,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:text="昵称"
+                android:text="邮箱"
                 android:gravity="center"
                 android:textSize="17dp"
                 android:layout_weight="1"
@@ -134,8 +138,19 @@
                 android:layout_weight="3"
                 android:textSize="17dp"
                 android:text="哈哈"
+                android:background="@null"
+                android:id="@+id/activity_student_change_info_email"
                 />
         </LinearLayout>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:text="提交"
+            android:id="@+id/activity_student_change_info_submit"
+            />
+
 
 
     </LinearLayout>
