教师可以开启考勤，学生也可以扫描蓝牙获取考勤权限并且进行考勤，也可以帮助他人进行考勤，欠缺功能有教师实时的查询考勤信息

--- a/app/src/main/res/layout/fragment_student_checking.xml
+++ b/app/src/main/res/layout/fragment_student_checking.xml
@@ -95,17 +95,44 @@
                 android:layout_marginRight="30dp"
                 />
         </RelativeLayout>
-        <Button
-            android:id="@+id/fragment_student_checking_button"
+
+        
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:layout_marginTop="40dp"
-            android:text="考勤"
-            android:textSize="17dp"
-            android:background="#4890cf"
+            android:orientation="horizontal"
+            android:weightSum="2"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            >
+            <Button
+                android:id="@+id/fragment_student_checking_button"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="考勤"
+                android:textSize="17dp"
+                android:background="@drawable/input_login"
+                android:layout_marginRight="10dp"
+                />
 
-            />
+
+            <Button
+                android:layout_marginLeft="10dp"
+                android:id="@+id/fragment_student_help_student_checking_button"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="他人考勤"
+                android:textSize="17dp"
+                android:background="@drawable/input_login"
+                />
+
+
+        </LinearLayout>
+
     </LinearLayout>
 
 </FrameLayout>
