--- a/app/src/main/res/layout/fragment_student_ask_for_leave.xml
+++ b/app/src/main/res/layout/fragment_student_ask_for_leave.xml
@@ -116,6 +116,7 @@
             android:layout_weight="3"
             >
             <EditText
+                android:id="@+id/fragement_student_ask_for_leave_reason"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@drawable/ask_for_leave_edit"
@@ -138,6 +139,7 @@
             android:text="提交操作"
             android:textSize="17dp"
             android:background="#4890cf"
+            android:id="@+id/fragment_student_ask_for_leave_submit"
 
             />
     </LinearLayout>
