--- a/app/src/main/res/layout/fragment_teacher_checking.xml
+++ b/app/src/main/res/layout/fragment_teacher_checking.xml
@@ -95,6 +95,55 @@
                 android:layout_marginRight="30dp"
                 />
         </RelativeLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            >
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:background="#ffffff"
+            android:orientation="horizontal"
+            android:weightSum="5"
+            android:layout_weight="2"
+            >
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="请选择考勤时间"
+                android:layout_weight="2"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:textSize="@dimen/unclick_text_size"
+                />
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="3"
+                >
+
+                <util.PickerView
+                    android:id="@+id/minute_pv"
+                    android:layout_width="80dp"
+                    android:layout_height="match_parent" />
+
+                <TextView
+                    android:id="@+id/minute_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="分"
+                    android:textColor="#ffaa33"
+                    android:textSize="26sp"
+                    android:textStyle="bold"
+                    android:layout_gravity="center"
+                    />
+
+            </LinearLayout>
+
+        </LinearLayout>
 
         <Button
             android:layout_width="match_parent"
@@ -104,6 +153,7 @@
             android:text="考勤"
             android:textSize="17dp"
             android:background="#57add2"
+            android:id="@+id/fragment_teacher_checking_start_checking"
             />
         <Button
             android:layout_width="match_parent"
