--- a/app/src/main/res/layout/teacher_checking_student_list_item.xml
+++ b/app/src/main/res/layout/teacher_checking_student_list_item.xml
@@ -1,34 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+              android:orientation="horizontal"
+              android:weightSum="3"
+    >
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="60dp"
         android:id="@+id/tacher_checking_student_list_student_no"
         android:textColor="#000000"
         android:layout_gravity="center"
         android:gravity="center"
         android:textSize="16dp"
+        android:layout_weight="1"
+
         />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="60dp"
         android:id="@+id/teacher_checking_student_list_student_name"
         android:textColor="#000000"
         android:layout_gravity="center"
         android:gravity="center"
         android:textSize="16dp"
+        android:layout_weight="1"
         />
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="60dp"
         android:id="@+id/teacher_checking_student_list_student_state"
         android:textColor="#000000"
         android:layout_gravity="center"
         android:gravity="center"
         android:textSize="16dp"
+        android:layout_weight="1"
         />
 
 </LinearLayout>
